--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,15 @@
     "name": "platform",
     "type": "java.lang.String",
     "description": "A description for 'platform'"
+  },
+  {
+    "name": "mqtt.broker.url",
+    "type": "java.lang.String",
+    "description": "A description for 'mqtt.broker.url'"
+  },
+  {
+    "name": "mqtt.folderpersistence",
+    "type": "java.lang.String",
+    "description": "A description for 'mqtt.folderpersistence'"
   }
 ]}
