--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,4 +64,4 @@ platform=pc
 # MQTT 
 # =========
 mqtt.broker.url=tcp://broker.hivemq.com:1883
-mqtt.filepersistence=/tmp
+mqtt.folderpersistence=/tmp
