--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@
 # =======
 
 # Base URI for REST API
-rest.api.base.uri=/station-api
+rest.api.base.uri=/api
 
 # Relative URIS for each REST API Resource
-station.uri=${rest.api.base.uri}/station
+iotassistant.uri=${rest.api.base.uri}/iotassistant
 sensors.uri=${rest.api.base.uri}/sensors
 cameras.uri=${rest.api.base.uri}/cameras
 actuators.uri=${rest.api.base.uri}/actuators
