--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 rest.api.base.uri=/api
 
 # Relative URIS for each REST API Resource
-iotassistant.uri=${rest.api.base.uri}/iotassistant
+system.uri=${rest.api.base.uri}/system
 sensors.uri=${rest.api.base.uri}/sensors
 cameras.uri=${rest.api.base.uri}/cameras
 actuators.uri=${rest.api.base.uri}/actuators
