--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -68,5 +68,20 @@
     "name": "rules.uri",
     "type": "java.lang.String",
     "description": "A description for 'rules.uri'"
+  },
+  {
+    "name": "mqtt.clientId",
+    "type": "java.lang.String",
+    "description": "A description for 'mqtt.clientId'"
+  },
+  {
+    "name": "mqtt.clientId",
+    "type": "java.lang.String",
+    "description": "A description for 'mqtt.clientId'"
+  },
+  {
+    "name": "mqtt.clientid",
+    "type": "java.lang.String",
+    "description": "A description for 'mqtt.clientid'"
   }
 ]}
