--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,4 @@ platform=pc
 # =========
 mqtt.broker.url=tcp://broker.hivemq.com:1883
 mqtt.folderpersistence=/tmp
+mqtt.clientid=LAPTOP-C2D8LU2Q 
