--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,15 @@ spring.jpa.hibernate.ddl-auto=update
 # =========
 # SECURITY
 # =========
-server.port=8443
+login.username=admin
+login.password=iotassistant
+
+# =========
+# LOGGING 
+# =========
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.path=/tmp
 
 # =========
 # TELEGRAM 
@@ -66,3 +74,5 @@ platform=pc
 mqtt.broker.url=tcp://broker.hivemq.com:1883
 mqtt.folderpersistence=/tmp
 mqtt.clientid=LAPTOP-C2D8LU2Q 
+
+
