--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -83,5 +83,15 @@
     "name": "mqtt.clientid",
     "type": "java.lang.String",
     "description": "A description for 'mqtt.clientid'"
+  },
+  {
+    "name": "login.username",
+    "type": "java.lang.String",
+    "description": "A description for 'login.username'"
+  },
+  {
+    "name": "login.password",
+    "type": "java.lang.String",
+    "description": "A description for 'login.password'"
   }
 ]}
