--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,8 @@ spring.jpa.hibernate.ddl-auto=update
 # =========
 login.username=admin
 login.password=iotassistant
+# 31536000 sec = 1 year
+server.session.timeout=31536000  
 
 # =========
 # LOGGING 
@@ -71,8 +73,9 @@ platform=pc
 # =========
 # MQTT 
 # =========
-mqtt.broker.url=tcp://broker.hivemq.com:1883
+mqtt.broker.url=ssl://7f6a0b40dedf4d84b0c1f6250c512408.s1.eu.hivemq.cloud:8883
 mqtt.folderpersistence=/tmp
 mqtt.clientid=LAPTOP-C2D8LU2Q 
+
 
 
