--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,7 @@ server.session.timeout=31536000
 # =========
 # LOGGING 
 # =========
-logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.path=/tmp
 
